# scout

./: .bowerrc  .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .env  .eslintrc  .eslintrc.json  .firebaserc  .gitignore  .gitlint.yaml  .pre-commit-config.yaml  .pylintrc  .test_durations  .travis.yml  .wokeignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile-server  Gulpfile.js  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  RELEASE.md  Vagrantfile  appo.txt  bower.json  codecov.yaml  docker-compose-dev.yml  docker-compose-mm.yml  docker-compose.yml  docker-entrypoint.sh  fig.yml  (+26 more)
.configs/: pylintrc
.firebase/: hosting.YnVpbGQ.cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other-issue.md  user-story.md
.github/workflows/: appo.yml  build_and_publish.yml  deploy-stage-manually.yml  deploy_prod.yml  deploy_stage.yml  deploy_stage.yml.yml  docker_stage.yml  find_unused_code.yml  firebase-hosting-pull-request.yml  keep_a_changelog.yml  linting_and_fixing.yml  linting_only.yml  master-pipeline.yml  prod-test.yml  publish-container.yml  pull-request-pipeline.yml  pull_request_pipeline.yml  pull_request_pipeline2.yml  push-pipeline.yml  pythonapp.yml  react-modules-deploy-production.yml  react-modules-master-pipeline.yml  (+11 more)
__mocks__/: ScoutResponses.ts
admin-guide/: index.html
artwork/: logo.sketch  male-female.sketch  old-logo.sketch  scout-frontend.delineato
config_spec/: scout_config.ini  vcf_config.ini
configs/: boilerplate.cfg  config_reader.py  config_test.ini  core.ini  mip_v0.0.0.ini  read_congfig.py  scout_config_validator.ini  vcf_config.ini
containers/: mongo-secret.yaml  mongo.yaml  scout-web.yaml
docker/: Makefile  README.md  case-handler.py  docker-compose.EXAMPLE.yml  docker-compose.yml  panel-handler.py  scout-run.py  user-handler.py
docs/: CODEOWNERS  Dockerfile  GLOSSARY.md  Makefile  README.md  SUMMARY.md  development.md  faq.md  index.md  install.md  mkdocs.yml  technology.md
faq/: index.html
frontend/: .eslintignore  .prettierrc.json  README.md  tsconfig.json
install/: index.html
local/: config.py
provision/: playbook.yml  post-setup.sh
provisioning/: playbook.yml
public/: index.html  manifest.json
react/: README.md  package.json
react-modules/: .dockerignore  .eslintrc  .firebaserc  Dockerfile  Dockerfile.react  README.md  generate-react-cli.json  index.d.ts  jest.config.js  package.json  webpack.config.js
requirements/: dev.txt  prod.txt
scout/: __init__.py  __main__.py  __version__.py  _compat.py  admin.py  app.py  compat.py  config.py  constants.py  exc.py  extensions.py  helpers.py  models.py  settings.py  utils.py
scripts/: check_gene_symbols_changed_in_panels.py  convert_case_omim_format.py  deploy  export.py  fabfile.py  fetch_external_css_and_js.sh  genelist_to_panel.py  generate_test_data.py  make_omim_tests.py  merge_users.py  scouttools  tabulate_causative_ranks.py  transfer-archive.py  update_files_path.py  update_variant_panels.py  wipe_and_load.py
search/: search_index.json
src/: App.css  App.scss  App.test.tsx  App.tsx  index.html  index.tsx  server.js  server.ts
static/: scout-3-panel-file-example.xlsx
systemd/: 20-scout.preset  README.md  rewrite.sh  run_fcct.yaml  scout-create-datadir.service  scout-mongo.service  scout-pod.service  scout-scout.service  scout-setup-demo.service  scout.fcc
tests/: conftest.py  factories.py  test_backend_adapters.py  test_config.py  test_forms.py  test_functional.py  test_helpers.py  test_models.py  test_settings.py
user-guide/: index.html
(+1751 files in other folders)
